fix(plugins/plugin-client-common): non-pty output can have extra whitespace at top
this is a regression from some css tweaks for paragraphs in guidebook markdown

--- a/plugins/plugin-client-common/web/scss/components/Terminal/Commentary.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/Commentary.scss
@@ -561,6 +561,13 @@ $tip-toggle-opacity-2: 0.6;
   }
 }
 
+/** see https://github.com/kubernetes-sigs/kui/pull/8808 */
+.kui--markdown-from-repl {
+  & > p:first-child {
+    margin-top: 0;
+  }
+}
+
 @include MarkdownTabContentCard {
   /** Nested tabs */
   @include MarkdownTabContentCard {
